:memo: README: Add instructions to run in Docker